Update README.md update from CLI to GUI version